--- a/2024_0710_MybatisTest/src/main/webapp/search_sawon.html
+++ b/2024_0710_MybatisTest/src/main/webapp/search_sawon.html
@@ -32,6 +32,23 @@
 								}
 		});
 	}
+	
+	function search_sajob(){
+		
+		const deptno = $("#sajob").val();
+		
+		// Ajax로 요청
+		$.ajax({
+			url			:		"sawon/list.do",
+			data		:		{"sajob":sajob}, // sawon/list.do?sajob=대리
+			success		:		function(res_data){
+									$("#disp").html(res_data);
+								},
+			error		:		function(err){
+									alert(err.responseText);
+								}
+		});
+	}
 
 </script>
 </head>
@@ -47,7 +64,17 @@
 			 	<option value="30">30번부서</option>
 			 	<option value="40">40번부서</option>
 			 </select>
-			 <input class="btn btn-primary" type="button" value="검색" onclick="search();">
+			 <input class="btn btn-primary" type="button" value="부서별 검색" onclick="search();">
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	직급:<select class="form-control" id="sajob">
+			 	<option value="all">전체보기</option>
+			 	<option value="부장">부장</option>
+			 	<option value="과장">과장</option>
+			 	<option value="대리">대리</option>
+			 	<option value="사원">사원</option>
+			 	<option value="알바">알바</option>
+			 </select>
+			 <input class="btn btn-primary" type="button" value="직급별 검색" onclick="search_sajob();">
 			 
 	<hr>
 	<div id="disp">
